regression/verilog/data-types/wire_must_be_fourvalued.sv
module top;
  // error: wires must have a four-valued data type
  wire bit some_wire;
endmodule
